2022-10-16T16:08:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3260088385 # 535
* notice: last 14d: unq all: 38 5656
* notice: prev accum: outdated-unq outdated-all / unq all: 1108 72643 / 1171 78323
* notice: next accum: outdated-unq outdated-all / unq all: 1108 72643 / 1172 78299
* notice: prev exec diff / last date diff / accum: unq all: +1 +122 -0 -146 / +2 +259 -0 -0 / 2 259
* notice: removed / changed dates: [] / [2022-10-02 2022-10-16]

2022-10-16T08:08:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3258765607 # 534
* notice: last 14d: unq all: 38 5680
* notice: prev accum: outdated-unq outdated-all / unq all: 1108 72643 / 1172 78370
* notice: next accum: outdated-unq outdated-all / unq all: 1108 72643 / 1171 78323
* notice: prev exec diff / last date diff / accum: unq all: +1 +137 -2 -184 / +1 +137 -0 -0 / 1 137
* notice: removed / changed dates: [] / [2022-10-02 2022-10-16]

2022-10-16T00:43:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3257719066 # 533
* notice: last 14d: unq all: 39 5727
* notice: prev accum: outdated-unq outdated-all / unq all: 1106 72238 / 1171 77896
* notice: next accum: outdated-unq outdated-all / unq all: 1108 72643 / 1172 78370
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -13 / +2 +407 -0 -0 / 2 407
* notice: removed / changed dates: [2022-10-01] / [2022-10-02 2022-10-15]

2022-10-15T16:08:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3256316387 # 532
* notice: last 14d: unq all: 39 5658
* notice: prev accum: outdated-unq outdated-all / unq all: 1106 72238 / 1172 77922
* notice: next accum: outdated-unq outdated-all / unq all: 1106 72238 / 1171 77896
* notice: prev exec diff / last date diff / accum: unq all: +0 +121 -1 -147 / +2 +259 -0 -0 / 2 259