@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-04T00:47:16Z",
-  "count" : 402,
+  "timestamp" : "2022-10-17T00:47:04Z",
+  "count" : 383,
   "count_minmax" : [ 138, 402 ],
-  "count_decinc" : [ -0, +402 ],
+  "count_decinc" : [ -19, +402 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
