@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-16T16:08:05Z",
-  "count" : 259,
-  "count_minmax" : [ 137, 259 ],
-  "count_decinc" : [ -0, +259 ],
+  "timestamp" : "2022-10-17T00:47:04Z",
+  "count" : 407,
+  "count_minmax" : [ 137, 407 ],
+  "count_decinc" : [ -0, +407 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
