@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-10-16T16:08:05Z",
-  "count_outdated" : 72643,
-  "uniques_outdated" : 1108,
-  "count" : 78299,
-  "uniques" : 1172,
+  "timestamp" : "2022-10-17T00:47:04Z",
+  "count_outdated" : 73052,
+  "uniques_outdated" : 1111,
+  "count" : 78771,
+  "uniques" : 1174,
   "clones" : [
     {
-      "timestamp": "2022-10-02T00:00:00Z",
-      "count": 66,
-      "count_minmax": [ 66, 409 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ]
-    },
-    {
       "timestamp": "2022-10-03T00:00:00Z",
-      "count": 402,
+      "count": 383,
       "count_minmax": [ 138, 402 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-16T00:00:00Z",
-      "count": 259,
-      "count_minmax": [ 137, 259 ],
+      "count": 407,
+      "count_minmax": [ 137, 407 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
