@@ -1,15 +1,10 @@
 {
-  "count": 5656,
+  "count": 5719,
   "uniques": 38,
   "clones": [
     {
-      "timestamp": "2022-10-02T00:00:00Z",
-      "count": 66,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-10-03T00:00:00Z",
-      "count": 402,
+      "count": 383,
       "uniques": 1
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-10-16T00:00:00Z",
-      "count": 259,
+      "count": 407,
       "uniques": 2
     }
   ]
